Fixed contact info spacing

--- a/css/main.css
+++ b/css/main.css
@@ -135,7 +135,7 @@ section#contact .section-heading {
 }
 
 section#contact .section-heading {
-  padding-bottom: 260px;
+  padding-bottom: 100px;
 }
 
 /* Change padding in header for portrait */
@@ -150,7 +150,7 @@ section#contact .section-heading {
   color: white;
   line-height: 3em;
   font-size: 2.3em;
-  padding-bottom: 100px;
+  padding-bottom: 180px;
 }
 
 /* Change navbar color */
